--- a/gleam.toml
+++ b/gleam.toml
@@ -1,14 +1,12 @@
 name = "pevensie"
-version = "1.0.0"
+version = "0.1.0"
+description = "The backend web toolkit for Gleam!"
+licences = ["MIT"]
+repository = { type = "github", user = "Pevensie", repo = "pevensie" }
+links = [{ title = "Website", href = "https://pevensie.dev" }]
 
-# Fill out these fields if you intend to generate HTML documentation or publish
-# your project to the Hex package manager.
-#
-# description = ""
-# licences = ["Apache-2.0"]
-# repository = { type = "github", user = "", repo = "" }
-# links = [{ title = "Website", href = "" }]
-#
+target = "erlang"
+
 # For a full reference of all the available options, you can have a look at
 # https://gleam.run/writing-gleam/gleam-toml/.
 
