--- a/gleam.toml
+++ b/gleam.toml
@@ -15,6 +15,8 @@ birl = ">= 1.7.1 and < 2.0.0"
 decode = ">= 0.2.0 and < 1.0.0"
 gleam_json = ">= 1.0.1 and < 2.0.0"
 gleam_crypto = ">= 1.3.0 and < 2.0.0"
+glint = ">= 1.0.1 and < 2.0.0"
+argv = ">= 1.0.2 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
