--- a/gleam.toml
+++ b/gleam.toml
@@ -7,19 +7,20 @@ links = [{ title = "Website", href = "https://pevensie.dev" }]
 target = "erlang"
 
 [dependencies]
-gleam_stdlib = ">= 0.43.0 and < 1.0.0"
+gleam_stdlib = ">= 0.51.0 and < 1.0.0"
 gleam_erlang = ">= 0.30.0 and < 1.0.0"
 argus = ">= 1.0.2 and < 2.0.0"
-birl = ">= 1.7.1 and < 2.0.0"
-decode = ">= 0.5.0 and < 1.0.0"
+decode = ">= 1.1.0 and < 2.0.0"
 gleam_json = ">= 2.0.0 and < 3.0.0"
 gleam_crypto = ">= 1.4.0 and < 2.0.0"
-glint = ">= 1.1.0 and < 2.0.0"
+glint = ">= 1.1.1 and < 2.0.0"
 argv = ">= 1.0.2 and < 2.0.0"
 simplifile = ">= 2.2.0 and < 3.0.0"
-snag = ">= 0.3.0 and < 1.0.0"
 filepath = ">= 1.1.0 and < 2.0.0"
-pog = ">= 1.0.0 and < 2.0.0"
+gtempo = ">= 5.0.2 and < 6.0.0"
+pog = ">= 2.0.0 and < 3.0.0"
+snag = ">= 1.0.0 and < 2.0.0"
+gleam_community_ansi = { path = "../gleam-community-ansi" }
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
